--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+# 톰캣 기본 요청 사이즈는 2MB, 그것보다 큰 요청을 받고 싶은 경우 이 값을 조정
+server.tomcat.max-http-form-post-size=5120000
+
+# 웹 서버 호스트
 app.host=http://localhost:8080
